Make jdk.internal.clang upgradable module